[tool.poetry]
name = "us-covid-stats"
version = "0.1.0"
description = "#CloudGuruChallenge (Sept. 2020) - Event-Driven Python"
authors = ["Noel Martin Llevares <noelmartin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = "^20.8b1"
flake8-breakpoint = "^1.1.0"
flake8 = "^3.8.4"
pdbpp = "^0.10.2"
mypy = "^0.790"
ipython = "^7.19.0"
pytest = "^6.1.2"
boto3 = "^1.16.24"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '/(\.git|\.mypy_cache|node_modules|.serverless)/'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
